--- a/test/index.html
+++ b/test/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../link/fontawesome-icons-font/fontawesome-free-6.7.2-web/css/all.css">
 </head>
 <body>
-    <div><i class="fa-solid fa-bars"></i></div>
+    <h1>Hello</h1>
 </body>
 </html>
